# DCM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dcm/: __init__.py  database.py  mini_player.py  player.py  state.py  tray_app.py  web_app.py
dcm/core/: extract_features.py  generate_playlist.py  metadata.py  suggest_next.py
dcm/ui/: __init__.py  loading_dialog.py  main.kv  main.kv.bak  main.py  main_screen.py
dcm/ui/web/: index.html  tailwind.config.js
dcm/ui/web/src/: App.jsx  index.css
dcm/ui/web/src/components/: Player.jsx  RecommendationList.jsx
scripts/: extract_all_features.py
