[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcm"
version = "0.1.0"
description = "DCM (Desktop/Mobile Music Assistant) - A privacy-focused, offline music player with AI-powered recommendations"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
dcm = "dcm.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0,<7.0.0",
    "black>=22.0.0,<23.0.0",
    "isort>=5.0.0,<6.0.0",
    "mypy>=0.900,<1.0",
    "pylint>=2.12.0,<3.0.0",
    "pytest-cov>=3.0.0,<4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["numpy.*", "pandas.*", "librosa.*"]
ignore_missing_imports = true
